--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
-}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+ }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ body{
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color:#F4F4F9 ;
+  
+ }
+
+ .bmi-calculator{
+  width: 880px;
+  height: 500px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 35px;
+  display: flex;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+ }
+
+ .box{
+  width: 400px;
+  background-image: url("asset/bmi.webp");
+  background-position: center ;
+  background-repeat: no-repeat;
+   
+
+
+ }
+
+ .data{
+  flex: 1;
+  padding: 15px;
+ }
+
+ h1{
+  font-weight: 600;
+  margin-bottom: 20px;
+  padding: 10px 8px;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: cornflowerblue;
+ }
+
+ .input-container{
+  margin-bottom: 15px;
+ }
+
+label{
+  display: block;
+  margin-bottom: 5px;
+  color: #888;
+ }
+
+ input{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 18px;
+ }
+
+ button{
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px; 
+ }
+
+ button:hover{
+  background-color: #2980db;
+  
+ }
+
+
+ .result{
+  margin-top: 20px;
+  padding:10px;
+  
+  border-radius: 4px;
+ }
+
+ .result p{
+  margin: 10px 0;
+  color: #555;
+  font-weight: bold;
+ }
+
+.btn-reset{
+  color: #fff;
+  background-color: crimson;
+  margin-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-reset:hover{
+  background-color: red;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-cheack:hover{
+  cursor: pointer;
 }
